# pyspark-vector-files

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Untitled Diagram.drawio  api.html  genindex.html  index.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: ci.yml  deplot-docs.yml  deploy-docs.yml  release.yml  test-pypi.yml  vulnerability-scanning.yml
_sources/: api.rst.txt  index.rst.txt
actions/setup-environment/: action.yml
config/: install_gdal.sh
docs/: api.html  genindex.html  index.html  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_sources/: readme.rst.txt  usage.rst.txt
docs/_static/: documentation_options.js
source/: api.rst  conf.py  requirements.txt  usage.rst
src/pyspark_vector_files/: __init__.py  _files.py  _parallel_reader.py  _paths.py  _schema.py  _types.py  constants.py  gpkg.py
tests/: conftest.py  test__a.py  test__files.py  test__init__.py  test__parallel_reader.py  test__schema.py  test_paths.py
tests/data/: folder.tar
tests/data/fileGDB/first.gdb/: first.dbf  second.shx  third.dbf  third.shp  third.shx
tests/data/fileGDB/second.gdb/: first.dbf  first.shp  first.shx  second.dbf  second.shp  second.shx
tests/data/fileGDB/wrong/data_source_wrong_types.gdb/: first.dbf  first.shp  second.shp
tests/data/shapefile/: first.shx  first.tar.gz.properties  second.dbf  second.tar.gz.properties
