[tool.poetry]
name = "pyspark_vector_files"
version = "0.1.3"
description = "Read vector files into a Spark DataFrame with geometry encoded as WKB."
authors = ["Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Defra-Data-Science-Centre-of-Excellence/pyspark-vector-files"
documentation = "https://defra-data-science-centre-of-excellence.github.io/pyspark-vector-files/"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.9"
more-itertools = "^8.12.0"
pandas = "1.2.4"
pyspark = "3.1.2"
GDAL = "3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
nox = "^2021.6.12"
black = "^21.9b0"
mypy = "^0.910"
flake8-black = "^0.2.3"
flake8-isort = "^4.0.0"
flake8-bugbear = "^21.9.1"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
isort = "^5.9.3"
safety = "^1.10.3"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
chispa = "^0.8.2"
Sphinx = "^4.0.0"
myst-parser = "^0.16.1"
pyarrow = "^6.0.1"
ipykernel = "^6.7.0"
geopandas = "^0.10.2"
nox-poetry = "^0.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
omit = ["src/pyspark_vector_files/core.py"]
source = ["pyspark_vector_files"]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
