[tool.poetry]
name = "pyspark_vector_files"
version = "0.2.2"
description = "Read vector files into a Spark DataFrame with geometry encoded as WKB."
authors = ["Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Defra-Data-Science-Centre-of-Excellence/pyspark-vector-files"
documentation = "https://defra-data-science-centre-of-excellence.github.io/pyspark-vector-files/"

[tool.poetry.dependencies]
python = "~3.8"
more-itertools = "^8.12.0"
pandas = "1.2.4"
pyspark = "3.2.1"
GDAL = "3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.3"
pytest-cov = "^3.0.0"
nox = "^2022.8.7"
black = "22.6.0"
mypy = "^0.971"
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
flake8-bugbear = "^22.7.1"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
isort = "^5.10.1"
safety = "^2.1.1"
pre-commit = "^2.20.0"
flake8 = "4.0.1"
flake8-bandit = "^3.0.0"
chispa = "^0.8.2"
Sphinx = "^5.1.1"
myst-parser = "^0.18.0"
pyarrow = "^9.0.0"
ipykernel = "^6.15.1"
geopandas = "^0.11.1"
nox-poetry = "^1.0.1"
piccolo-theme = "^0.11.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
omit = ["src/pyspark_vector_files/core.py"]
source = ["pyspark_vector_files"]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "test"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "nox",
    "pytest"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
